--- a/app/src/main/res/layout/activity_cet.xml
+++ b/app/src/main/res/layout/activity_cet.xml
@@ -31,8 +31,8 @@
             android:text="CET"
             android:textColor="@color/app_white"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30px"
-            android:layout_marginLeft="130px"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="50dp"
             app:layout_constraintStart_toStartOf="@id/CET_back"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -43,8 +43,8 @@
             android:text="正在更新"
             android:textColor="@color/app_white"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30px"
-            android:layout_marginLeft="300px"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="110dp"
             app:layout_constraintTop_toTopOf="parent" />
 
     </RelativeLayout>
