--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -28,11 +28,10 @@
             android:id="@+id/detail_title"
             android:layout_width="wrap_content"
             android:textSize="20dp"
-            android:text=""
             android:textColor="@color/app_white"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30px"
-            android:layout_marginLeft="130px"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="60dp"
             app:layout_constraintTop_toTopOf="parent" />
 
     </RelativeLayout>
