--- a/app/src/main/res/layout/activity_exam.xml
+++ b/app/src/main/res/layout/activity_exam.xml
@@ -31,8 +31,8 @@
             android:text="考试安排"
             android:textColor="@color/app_white"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30px"
-            android:layout_marginLeft="130px"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="50dp"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -42,8 +42,8 @@
             android:text="正在更新"
             android:textColor="@color/app_white"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30px"
-            android:layout_marginLeft="420px"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="160dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
