--- a/app/src/main/res/layout/fragement_preson.xml
+++ b/app/src/main/res/layout/fragement_preson.xml
@@ -16,8 +16,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="70px"
-            android:layout_marginTop="30px"
+            android:layout_marginLeft="25dp"
+            android:layout_centerVertical="true"
             android:text="个人信息与设置"
             android:textColor="@color/app_white"
             android:textSize="20dp"
