--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,15 @@
 <resources>
+
+
+
+    <style name="SwitchPreference" >
+        <item name="android:colorAccent">@color/colorPrimary</item>
+    </style>
+    
+    <style name="PreferenceCategoryStyle">
+        <item name="android:colorPrimary">@color/colorPrimary</item>
+    </style>
+
     <!-- Base application theme. -->
     <style name="AppTheme" parent="XUITheme.Phone">
         <!-- Customize your theme here. -->
