--- a/app/src/main/res/values/entries_list_preference.xml
+++ b/app/src/main/res/values/entries_list_preference.xml
@@ -4,12 +4,10 @@
         <item>1天</item>
         <item>3天</item>
         <item>7天</item>
-        <item>30天</item>
     </string-array>
     <string-array name="day_values">
-        <item>1天</item>
-        <item>3天</item>
-        <item>7天</item>
-        <item>30天</item>
+        <item>1</item>
+        <item>3</item>
+        <item>7</item>
     </string-array>
 </resources>
