设置 解决颜色改为蓝色问题

--- a/app/src/main/res/layout/activity_my_setting.xml
+++ b/app/src/main/res/layout/activity_my_setting.xml
@@ -1,41 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MySettingActivity"
     android:orientation="vertical">
-<!--
-    <RelativeLayout
-        android:id="@+id/more_head"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@color/colorPrimary"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="109dp">
-
-        <ImageView
-            android:id="@+id/setting_back"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            app:tint="@color/app_white"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:src="@drawable/back" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:textSize="20dp"
-            android:text="设置"
-            android:textColor="@color/app_white"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30px"
-            android:layout_marginLeft="130px"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    </RelativeLayout>-->
 
     <ListView
         android:id="@android:id/list"
