--- a/app/src/main/res/layout/activity_experimentscore.xml
+++ b/app/src/main/res/layout/activity_experimentscore.xml
@@ -16,7 +16,7 @@
         tools:layout_editor_absoluteX="109dp">
 
         <ImageView
-            android:id="@+id/examscore_back"
+            android:id="@+id/experimentscore_back"
             android:layout_width="25dp"
             android:layout_height="25dp"
             app:tint="@color/app_white"
@@ -36,7 +36,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/examscore_state"
+            android:id="@+id/experimentscore_state"
             android:layout_width="wrap_content"
             android:textSize="20dp"
             android:text="正在更新"
@@ -48,7 +48,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/exam_score_more"
+            android:id="@+id/experiment_score_more"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_centerVertical="true"
@@ -59,7 +59,7 @@
     </RelativeLayout>
 
     <TextView
-        android:id="@+id/examscore_not_find"
+        android:id="@+id/experimentscore_not_find"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
@@ -69,7 +69,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/examscore_info_view"
+        android:id="@+id/experimentscore_info_view"
         android:layout_marginBottom="8dp"
         android:orientation="vertical">
 
@@ -80,17 +80,17 @@
             android:background="@color/colorPrimary">
 
             <TextView
-                android:id="@+id/examScoreName"
+                android:id="@+id/experimentScoreName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="课程"
+                android:text="实验名称"
                 android:textColor="@color/app_white"
                 android:gravity="center"
                 android:textSize="20dp" />
 
             <TextView
-                android:id="@+id/examScoreFinal"
+                android:id="@+id/experimentScoreCheck"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1.5"
@@ -100,17 +100,7 @@
                 android:textSize="20dp" />
 
             <TextView
-                android:id="@+id/examScoreUsually"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1.5"
-                android:text="实验"
-                android:textColor="@color/app_white"
-                android:gravity="center"
-                android:textSize="20dp" />
-
-            <TextView
-                android:id="@+id/examScoreExperiment"
+                android:id="@+id/experimentScoreUsually"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1.5"
@@ -120,7 +110,7 @@
                 android:textSize="20dp" />
 
             <TextView
-                android:id="@+id/examScoreCheck"
+                android:id="@+id/experimentScoreFinal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1.5"
@@ -132,7 +122,7 @@
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/examscore_info_recycler_view"
+            android:id="@+id/experimentscore_info_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
