--- a/app/src/main/res/layout/fragement_preson.xml
+++ b/app/src/main/res/layout/fragement_preson.xml
@@ -218,31 +218,31 @@
         android:layout_marginRight="5dp"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:id="@+id/person_detail_info"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:background="@color/app_white"
-            android:orientation="horizontal">
+<!--        <LinearLayout-->
+<!--            android:id="@+id/person_detail_info"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="45dp"-->
+<!--            android:background="@color/app_white"-->
+<!--            android:orientation="horizontal">-->
 
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginLeft="3dp"
-                android:layout_marginTop="8dp"
-                android:src="@drawable/xueshengdangan"
-                app:tint="@color/colorPrimary" />
+<!--            <ImageView-->
+<!--                android:layout_width="30dp"-->
+<!--                android:layout_height="30dp"-->
+<!--                android:layout_marginLeft="3dp"-->
+<!--                android:layout_marginTop="8dp"-->
+<!--                android:src="@drawable/xueshengdangan"-->
+<!--                app:tint="@color/colorPrimary" />-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="3dp"
-                android:text="个人详细信息"
-                android:textColor="@color/app_black"
-                android:textSize="17dp" />
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:layout_marginTop="10dp"-->
+<!--                android:layout_marginLeft="3dp"-->
+<!--                android:text="个人详细信息"-->
+<!--                android:textColor="@color/app_black"-->
+<!--                android:textSize="17dp" />-->
 
-        </LinearLayout>
+<!--        </LinearLayout>-->
 
         <View
             android:layout_width="fill_parent"
