--- a/app/src/main/res/xml/pref_setting.xml
+++ b/app/src/main/res/xml/pref_setting.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".SettingActivity">
 
@@ -8,10 +7,10 @@
         android:key="option"
         android:layout="@layout/setting" />
 
-        <PreferenceCategory
-            style="PreferenceCategoryStyle"
-            android:key="basic_settings"
-            android:title="基本设置">
+    <PreferenceCategory
+        style="PreferenceCategoryStyle"
+        android:key="basic_settings"
+        android:title="基本设置">
         <SwitchPreference
             android:defaultValue="true"
             android:key="refresh_data"
@@ -19,57 +18,63 @@
             android:title="课表自动更新" />
 
         <ListPreference
+            android:defaultValue="3"
             android:dependency="refresh_data"
             android:dialogTitle="选择课表更新频率"
             android:entries="@array/day_entities"
             android:entryValues="@array/day_values"
             android:key="refresh_data_frequency"
             android:summary="选择课表更新频率"
-            android:defaultValue="3"
             android:title="课表更新频率" />
 
         <SwitchPreference
+            android:defaultValue="true"
             android:key="show_exam_on_table"
             android:summary="开启后考试安排将在日课表和周课表显示"
-            android:title="课表显示考试安排"
-            android:defaultValue="true"/>
+            android:title="课表显示考试安排" />
 
-<!--        <CheckBoxPreference-->
-<!--            android:dependency="optionA"-->
-<!--            android:key="optionB"-->
-<!--            android:summary="这里是选项测试b"-->
-<!--            android:summaryOff="禁止B"-->
-<!--            android:summaryOn="允许B"-->
-<!--            android:title="选项测试B" />-->
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="update_lab"
+            android:summary="网络不佳时建议关闭同步课内实验"
+            android:title="同步更新课内实验安排" />
+
+        <!--        <CheckBoxPreference-->
+        <!--            android:dependency="optionA"-->
+        <!--            android:key="optionB"-->
+        <!--            android:summary="这里是选项测试b"-->
+        <!--            android:summaryOff="禁止B"-->
+        <!--            android:summaryOn="允许B"-->
+        <!--            android:title="选项测试B" />-->
 
     </PreferenceCategory>
 
     <PreferenceCategory android:title="高级设置">
 
         <ListPreference
+            android:defaultValue="62"
             android:dialogTitle="选择课程项长度"
             android:entries="@array/class_length_entities"
             android:entryValues="@array/class_length_values"
             android:key="class_length"
-            android:defaultValue="62"
             android:summary="设置周课表单个课程的长度"
             android:title="课程项长度" />
 
-<!--       <MultiSelectListPreference-->
-<!--            android:dialogIcon="@mipmap/ic_launcher"-->
-<!--            android:entries="@array/day_entities"-->
-<!--            android:entryValues="@array/day_values"-->
-<!--            android:key="option2_2"-->
-<!--            android:title="消息类型" />-->
+        <!--       <MultiSelectListPreference-->
+        <!--            android:dialogIcon="@mipmap/ic_launcher"-->
+        <!--            android:entries="@array/day_entities"-->
+        <!--            android:entryValues="@array/day_values"-->
+        <!--            android:key="option2_2"-->
+        <!--            android:title="消息类型" />-->
 
-<!--        <PreferenceScreen-->
-<!--            android:key="option2_3"-->
-<!--            android:summary="打开哔哩哔哩"-->
-<!--            android:title="哔哩哔哩">-->
-<!--            <intent-->
-<!--                android:action="android.intent.action.VIEW"-->
-<!--                android:data="https://www.bilibili.com/" />-->
-<!--        </PreferenceScreen>-->
+        <!--        <PreferenceScreen-->
+        <!--            android:key="option2_3"-->
+        <!--            android:summary="打开哔哩哔哩"-->
+        <!--            android:title="哔哩哔哩">-->
+        <!--            <intent-->
+        <!--                android:action="android.intent.action.VIEW"-->
+        <!--                android:data="https://www.bilibili.com/" />-->
+        <!--        </PreferenceScreen>-->
 
     </PreferenceCategory>
 
