--- a/app/src/main/res/layout/activity_average_teacher.xml
+++ b/app/src/main/res/layout/activity_average_teacher.xml
@@ -50,14 +50,36 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_weight="1">
 
-        <TextView
-            android:id="@+id/test"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/teacher_info_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="1111"/>
+            android:layout_height="match_parent" />
 
     </ScrollView>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/colorPrimary"
+        android:layout_margin="5dp"/>
+
+
+    <com.xuexiang.xui.widget.button.roundbutton.RoundButton
+        android:id="@+id/avg_teacher_start"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="20dp"
+        android:text="开始自动评价教师"
+        android:textColor="@android:color/white"
+        android:textSize="23dp"
+        app:rb_backgroundColor="@color/colorPrimary" />
 
 </LinearLayout>
