feat:一键评教界面 fix:实验成绩文字错误的bug

--- a/app/src/main/res/layout/activity_experimentscore.xml
+++ b/app/src/main/res/layout/activity_experimentscore.xml
@@ -28,7 +28,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:textSize="20dp"
-            android:text="考试成绩"
+            android:text="实验成绩"
             android:textColor="@color/app_white"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
