--- a/app/src/main/res/layout/activity_average_teacher.xml
+++ b/app/src/main/res/layout/activity_average_teacher.xml
@@ -48,6 +48,14 @@
 
     </RelativeLayout>
 
+    <TextView
+        android:id="@+id/teacher_waite"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:text="正在查询，请稍后"
+        android:textSize="25dp"/>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
