perf:使用BindView简化MoreFun部分代码

--- a/app/src/main/res/layout/activity_cet.xml
+++ b/app/src/main/res/layout/activity_cet.xml
@@ -16,6 +16,7 @@
 
         <ImageView
             android:id="@+id/CET_back"
+            android:onClick="onClick"
             android:layout_width="25dp"
             android:layout_height="25dp"
             app:tint="@color/app_white"
