--- a/app/src/main/res/layout/activity_average_teacher.xml
+++ b/app/src/main/res/layout/activity_average_teacher.xml
@@ -16,6 +16,7 @@
 
         <ImageView
             android:id="@+id/average_teacher_back"
+            android:onClick="onClick"
             android:layout_width="25dp"
             android:layout_height="25dp"
             app:tint="@color/app_white"
@@ -76,6 +77,7 @@
 
 
     <com.xuexiang.xui.widget.button.roundbutton.RoundButton
+        android:onClick="onClick"
         android:id="@+id/avg_teacher_start"
         android:layout_width="match_parent"
         android:layout_height="40dp"
