feat:添加隐私政策

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -142,7 +142,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="陈子昌"
+                android:text="就这 Casual"
                 android:textSize="20dp" />
 
             <TextView
