--- a/app/src/main/res/layout/fragement_more.xml
+++ b/app/src/main/res/layout/fragement_more.xml
@@ -304,7 +304,7 @@
             android:orientation="horizontal" >
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/more_item_7"
+                android:id="@+id/more_index"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="10dp"
