--- a/app/src/main/res/layout/fragement_preson.xml
+++ b/app/src/main/res/layout/fragement_preson.xml
@@ -398,6 +398,32 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/person_privacy"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:background="@color/app_white"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginTop="8dp"
+                android:src="@drawable/privacy"
+                app:tint="@color/colorPrimary" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="4dp"
+                android:text="隐私政策"
+                android:textColor="@color/app_black"
+                android:textSize="17dp" />
+
+        </LinearLayout>
+
         <View
             android:layout_width="fill_parent"
             android:layout_height="0.5dp"
